update-filter-section

--- a/index.html
+++ b/index.html
@@ -330,5 +330,258 @@
             </article>
         </div>
     </section>
+    <section class="filter-section">
+        <h1>CHOOSE YOUR WEED</h1>
+        <div class="interest-filter">
+            <p>Filter by Interest</p>
+            <button>Flowers</button>
+            <button>Mushrooms</button>
+            <button>Concentrate</button>
+            <button>Edibles</button>
+            <button>Shop All Weed</button>
+        </div>
+        <article class="product-grid">
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+        </article>
+    </section>
 </body>
 </html>
