--- a/index.html
+++ b/index.html
@@ -601,26 +601,34 @@
         <p>Ordering weed online from Top Shelf BC is easy. We are proud to have made the process accessible across multiple platforms and simple to understand, meaning that more people can come to us to buy their cannabis products online.</p>
         <div class="order-steps">
             <div class="order-step">
-                <img src="" alt="">
-                <img src="" alt="">
+                <div class="order-container">
+                    <img src="./assets/1-label.svg" alt="">
+                    <img src="./assets/regist.svg" alt="">
+                </div>
                 <p>REGISTER</p>
                 <p>Sign up for an account with us. This is quick and simple. We don’t require any more details from you than the bare minimum needed for you to place an order and get your product delivered.</p>
             </div>
             <div class="order-step">
-                <img src="" alt="">
-                <img src="" alt="">
+                <div class="order-container">
+                    <img src="./assets/2-label.svg" alt="">
+                    <img src="./assets/shop.svg" alt="">
+                </div>
                 <p>SHOP</p>
                 <p>Decide on what you want to purchase. We stock a wide range of edibles, flowers, concentrates, and mushrooms there is bound to be something for everyone.</p>
             </div>
             <div class="order-step">
-                <img src="" alt="">
-                <img src="" alt="">
+                <div class="order-container">
+                    <img src="./assets/3-label.svg" alt="">
+                    <img src="./assets/payment.svg" alt="">
+                </div>
                 <p>MAKE PAYMENT</p>
                 <p>Pay securely. Our site boasts sturdy protection certificates to keep your card details and related data safe.</p>
             </div>
             <div class="order-step">
-                <img src="" alt="">
-                <img src="" alt="">
+                <div class="order-container">
+                    <img src="./assets/4-label.svg" alt="">
+                    <img src="./assets/relax.svg" alt="">
+                </div>
                 <p>RELAX</p>
                 <p>Your product will be packaged discreetly and shipped by Canada Post Xpresspost. We will provide you with a tracking number so then you can follow your mail order marijuana every step of the way.</p>
             </div>
