recent added section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="product-list overflow">
             <div class="product-item">
-                <img src="./assets/image 13_prev_ui 1.png" alt="">
+                <img src="./assets/image_13_prev_ui 1.png" alt="">
                 <p>Shop our Best Sellers</p>
                 <p>Lorem ipsum dolor sit amet consectetur. Ullamcorper ipsum varius lorem blandit lectus magnis feugiat.</p>
                 <button>View All</button>
@@ -118,7 +118,7 @@
             <div class="product-list-item">
                 <div class="product-details">
                     <div class="product-images">
-                        <img src="./assets/image 12_prev_ui 1.png" alt="">
+                        <img src="./assets/image_12_prev_ui 1.png" alt="">
                     </div>
                     <p>FLOWER</p>
                     <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="product-details">
                     <div class="product-images">
-                        <img src="./assets/image 13_prev_ui 1 item.png" alt="">
+                        <img src="./assets/image_13_prev_ui 1 item.png" alt="">
                     </div>
                     <p>CONCENTRATES</p>
                     <p>Mix And Match Shatter/Budder 28g (4 X 7G)</p>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="product-details">
                     <div class="product-images">
-                        <img src="./assets/image 12_prev_ui 1 item.png" alt="">
+                        <img src="./assets/image_12_prev_ui 1 item.png" alt="">
                     </div>
                     <p>FLOWER</p>
                     <p>2 Oz Deal Ahi Tuna + Master 
@@ -343,7 +343,7 @@
         <article class="product-grid">
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -373,7 +373,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -403,7 +403,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -433,7 +433,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -463,7 +463,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -493,7 +493,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -523,7 +523,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -553,7 +553,7 @@
             </div>
             <div class="card-product">
                 <div class="bg-product-image">
-                    <img src="./assets/image 12_prev_ui 1.png" alt="">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
                 </div>
                 <p>FLOWER</p>
                 <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
@@ -635,5 +635,206 @@
         </div>
         <button>Choose your Weed</button>
     </section>
+    <section class="intro-section pLR-10">
+        <h1>WHAT MAKES US THE <span>#1</span> ONLINE MARIJUANA DISPENSARY IN CANADA?</h1>
+        <p>When it comes to what makes us the foremost online marijuana dispensary in Canada, we could wax lyrical about our positive qualities. Instead, to make this information clearer, we’ve highlighted the six prioritized features that we feel makes us a cut above the rest.</p>
+    </section>
+    <section class="feature-section pLR-10">
+        <div class="container customer-service">
+            <img src="./assets/mdi_customer-service.svg" alt="">
+            <h3>CUSTOMER SERVICE</h3>
+            <p>Whether it is answering any questions you have before making a purchase, helping out with the buying process itself, or taking your feedback into consideration, we are proud to provide high-quality customer service that makes you – the customer – the most important person in the transaction.</p>
+        </div>
+        <div class="container security">
+            <img src="./assets/carbon_security.svg" alt="">
+            <h3>SECURITY</h3>
+            <p>Whether it is answering any questions you have before making a purchase, helping out with the buying process itself, or taking your feedback into consideration, we prioritize the security of your transactions to ensure a safe and reliable online shopping experience.</p>
+        </div>
+        <div class="container best-value">
+            <img src="./assets/vaadin_diamond-o.svg" alt="">
+            <h3>BEST VALUE</h3>
+            <p>When it comes to providing the best value for your money, we offer competitive prices and top-notch products, ensuring that you get the most out of your purchase and receive excellent quality at affordable prices.</p>
+        </div>
+        <div class="container delivery-insurance">
+            <img src="./assets/fluent_vehicle-truck-bag-20-regular.svg" alt="">
+            <h3>DELIVERY INSURANCE</h3>
+            <p>We understand the importance of secure and reliable delivery. That's why we provide delivery insurance to guarantee that your orders are protected during transit and arrive at your doorstep in a timely and secure manner.</p>
+        </div>
+        <div class="container highest-quality">
+            <img src="./assets/circum_medal.svg" alt="">
+            <h3>HIGHEST QUALITY</h3>
+            <p>We take pride in offering the highest quality marijuana products available in Canada. Our stringent quality control processes ensure that you receive products that meet the highest industry standards, providing you with a premium cannabis experience.</p>
+        </div>
+        <div class="container trust">
+            <img src="./assets/ph_handshake-light.svg" alt="">
+            <h3>TRUST</h3>
+            <p>Building trust with our customers is of utmost importance to us. We strive to create a transparent and trustworthy relationship by maintaining integrity, honesty, and accountability in every aspect of our business, earning your trust every step of the way.</p>
+        </div>
+    </section>
+    <section class="filter-section">
+        <h1>RECENTLY ADDED</h1>
+        <div class="interest-filter">
+            <p>Filter by Interest</p>
+            <button>Flowers</button>
+            <button>Mushrooms</button>
+            <button>Concentrate</button>
+            <button>Edibles</button>
+            <button>Shop All Weed</button>
+        </div>
+        <article class="product-grid-1-row">
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+            <div class="card-product">
+                <div class="bg-product-image">
+                    <img src="./assets/image_12_prev_ui 1.png" alt="">
+                </div>
+                <p>FLOWER</p>
+                <p>2 Oz Deal Watermelon Zkittles + Purple Gushers</p>
+                <div class="rating">
+                    <div class="stars">
+                      <img src="./assets/star-svgrepo-com.svg" alt="">
+                      <p>4.65/5</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="review">
+                      <p>135</p>
+                      <p>Review</p>
+                    </div>
+                  </div>
+                <p>Sativa 100%</p>
+                <div class="price-details">
+                    <p style="display: none">&#36;Price</p>
+                    <p>&#36;80.00</p>
+                    <p>/ Gram</p>
+                </div>
+                <div class="quantity-buttons">
+                    <button>28g</button>
+                    <button>1/2lb</button>
+                    <button>1/4lb</button>
+                </div>
+                <button>Add to Cart</button>
+            </div>
+        </article>
+    </section>
+    <section class="cannabis-type">
+        <div class="cannabis-type__item">
+            <div class="cannabis-type__image">
+                <img src="./assets/indica.svg" alt="">
+            </div>
+            <div class="cannabis-type__content">
+                <h3>Indica</h3>
+                <p>This type of cannabis is commonly taken by those who want to sink into a state of total relaxation in every limb. This reduces stress overall and can take your worries and fatigue away. Because of its relaxing effects, it is suggested to use this type of cannabis at night. It is particularly recommended for people who have trouble sleeping, be it due to insomnia, pain, or other associated sleep issues.</p>
+                <button>Shop Indica</button>
+            </div>
+        </div>
+        <div class="cannabis-type__item">
+            <div class="cannabis-type__image">
+                <img src="./assets/sativa.svg" alt="">
+            </div>
+            <div class="cannabis-type__content">
+                <h3>Sativa</h3>
+                <p>Contrary to the deep all-body relaxation that comes with the use of indica strains, sativas are known for increasing the feeling of creativity, enhancing focus, and lessening anxiety. This is more of a mind-centered high in terms of how and where you will feel the effects. Given its stimulating nature, it is recommended to use this during the day.</p>
+                <button>Shop Sativa</button>
+            </div>
+        </div>
+        <div class="cannabis-type__item">
+            <div class="cannabis-type__image">
+                <img src="./assets/hybird.svg" alt="">
+            </div>
+            <div class="cannabis-type__content">
+                <h3>Hybrids</h3>
+                <p>Hybrid strains are just that – they combine the head-focused high effects of sativas with the bodily relaxation of indicas. This is ideal for people who really want to soothe any fatigue and worries while also clearing the mind ready to focus fresh on something new. Hybrids are expertly tailored to result in strains with specific effects. Useful strain vocabulary to familiarize yourself with when it comes to hybrids includes sativa-dominant (full, bodily relaxation), indica-dominant (boosting creativity, increasing mood and lessening anxiety) and balanced (the best of both worlds).</p>
+                <button>Shop Hybrids</button>
+            </div>
+        </div>
+    </section>    
 </body>
 </html>
