update promo section, etc.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
     
     <section class="dispensary-section">
-        <h1>BEST DISPENSARY TO BUY WEED ONLINE IN CANADA</h1>
+        <h1>BEST DISPENSARY TO BUY W33d ONLINE IN CANADA</h1>
         <div class="button-group">
             <button>Best Sellers</button>
             <button>Bundles & Promotions</button>
@@ -331,14 +331,14 @@
         </div>
     </section>
     <section class="filter-section">
-        <h1>CHOOSE YOUR WEED</h1>
+        <h1>CHOOSE YOUR W33d</h1>
         <div class="interest-filter">
             <p>Filter by Interest</p>
             <button>Flowers</button>
             <button>Mushrooms</button>
             <button>Concentrate</button>
             <button>Edibles</button>
-            <button>Shop All Weed</button>
+            <button>Shop All W33d</button>
         </div>
         <article class="product-grid">
             <div class="card-product">
@@ -597,8 +597,8 @@
             </div>
             <img src="./assets/Vector.png" alt="">
         </div>
-        <h1>HOW TO ORDER WEED ONLINE FROM TOP SHELF BC - MAIL ORDER MARIJUANA</h1>
-        <p>Ordering weed online from Top Shelf BC is easy. We are proud to have made the process accessible across multiple platforms and simple to understand, meaning that more people can come to us to buy their cannabis products online.</p>
+        <h1>HOW TO ORDER W33d ONLINE FROM TOP SHELF BC - MAIL ORDER MARIJUANA</h1>
+        <p>Ordering W33d online from Top Shelf BC is easy. We are proud to have made the process accessible across multiple platforms and simple to understand, meaning that more people can come to us to buy their cannabis products online.</p>
         <div class="order-steps">
             <div class="order-step">
                 <div class="order-container">
@@ -633,7 +633,7 @@
                 <p>Your product will be packaged discreetly and shipped by Canada Post Xpresspost. We will provide you with a tracking number so then you can follow your mail order marijuana every step of the way.</p>
             </div>
         </div>
-        <button>Choose your Weed</button>
+        <button>Choose your W33d</button>
     </section>
     <section class="intro-section pLR-10">
         <h1>WHAT MAKES US THE <span>#1</span> ONLINE MARIJUANA DISPENSARY IN CANADA?</h1>
@@ -679,7 +679,7 @@
             <button>Mushrooms</button>
             <button>Concentrate</button>
             <button>Edibles</button>
-            <button>Shop All Weed</button>
+            <button>Shop All W33d</button>
         </div>
         <article class="product-grid-1-row">
             <div class="card-product">
@@ -834,6 +834,70 @@
                 <p>Hybrid strains are just that – they combine the head-focused high effects of sativas with the bodily relaxation of indicas. This is ideal for people who really want to soothe any fatigue and worries while also clearing the mind ready to focus fresh on something new. Hybrids are expertly tailored to result in strains with specific effects. Useful strain vocabulary to familiarize yourself with when it comes to hybrids includes sativa-dominant (full, bodily relaxation), indica-dominant (boosting creativity, increasing mood and lessening anxiety) and balanced (the best of both worlds).</p>
                 <button>Shop Hybrids</button>
             </div>
+        </div>
+    </section>
+    <section class="weed-education">
+        <div class="section-header">
+            <h3>W33d Education</h3>
+            <button>Show All</button>
+        </div>
+        <div class="article-list">
+            <article class="article">
+                <div class="article-image">
+                    <img src="./assets/image17.svg" alt="">
+                </div>
+                <p>January 24, 2023</p>
+                <h4>12 Mistakes To Avoid When Buying Cannabis Online</h4>
+                <p>Buying cannabis online can be a great way to get your hands on the products you need without leaving the comfort of your home. But …</p>
+                <button>Read More</button>
+            </article>
+            <article class="article">
+                <div class="article-image">
+                    <img src="./assets/image17.svg" alt="">
+                </div>
+                <p>January 24, 2023</p>
+                <h4>12 Mistakes To Avoid When Buying Cannabis Online</h4>
+                <p>Buying cannabis online can be a great way to get your hands on the products you need without leaving the comfort of your home. But …</p>
+                <button>Read More</button>
+            </article>
+            <article class="article">
+                <div class="article-image">
+                    <img src="./assets/image17.svg" alt="">
+                </div>
+                <p>January 24, 2023</p>
+                <h4>12 Mistakes To Avoid When Buying Cannabis Online</h4>
+                <p>Buying cannabis online can be a great way to get your hands on the products you need without leaving the comfort of your home. But …</p>
+                <button>Read More</button>
+            </article>
+        </div>
+    </section>
+    <section class="promo-section">
+        <div class="promo">
+            <h2>UNLOCK 20% OFF YOUR FIRST ORDER</h2>
+            <p>Reveal coupon code by entering your email</p>
+            <hr>
+            <div class="email-input">
+                <input type="text" placeholder="Email Address" name="email" id="email-input">
+                <button class="reveal-coupon-button">Reveal coupon</button>
+            </div>
+        </div>
+        <div class="about-us">
+            <div class="about-us-content">
+                <img src="" alt="Top Shelf BC Logo">
+                <p>#1 Canadian top rated online dispensary that meets the customers needs in every single medical marijuana aspect. The team here at TopShelfBC is heavily involved in the Canadian cannabis industry for over 15 years...</p>
+            </div>
+            <h3>QUICK LINK</h3>
+            <div class="quick-links">
+                <ul class="quick-links-list">
+                    <li>Track Your Order</li>
+                    <!-- ... Other quick links ... -->
+                </ul>
+                <ul class="quick-links-list">
+                    <li>Mushrooms</li>
+                    <!-- ... Other quick links ... -->
+                </ul>
+            </div>
+            <!-- ... Other content ... -->
         </div>
     </section>    
 </body>
